[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/QuestionnaireConfiguration/Items/SubOptions/ItemOptionsOptions.gd" type="Script" id=1]

[node name="ItemOptionsOptions" type="GridContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumOptionsLabel" type="Label" parent="."]
margin_top = 5.0
margin_right = 123.0
margin_bottom = 19.0
text = "Number of Options"

[node name="NumOptionsSpinBox" type="SpinBox" parent="."]
margin_left = 127.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3

[connection signal="value_changed" from="NumOptionsSpinBox" to="." method="_on_NumOptionsSpinBox_value_changed"]
